# call-ai

./: .dockerignore  .env  .env.example  .firebaserc  App.tsx  Dockerfile  README.md  asterisk_server.py  env.d.ts  firebase.json  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
.idx/: dev.nix
ai-chatbot/ai-chatbot/: Makefile  README.md  alembic.ini  c.py  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  response.xlsx  strip_comments.py
ai-chatbot/ai-chatbot/asterisk/etc/: ari.conf  asterisk.conf  extensions.conf  http.conf  modules.conf  pjsip.conf  rtp.conf
ai-chatbot/ai-chatbot/docker/: Dockerfile  Dockerfile.telegram  Dockerfile.worker
ai-chatbot/ai-chatbot/nginx/conf.d/: default.conf
ai-chatbot/ai-chatbot/scripts/: deploy.sh  init-db.sql  voice_demo.py  write_clients.py  write_models_repos.py  write_services_part1.py
ai-chatbot/ai-chatbot/src/: main.py
ai-chatbot/ai-chatbot/src/api/: deps.py
ai-chatbot/ai-chatbot/src/api/v1/: router.py
ai-chatbot/ai-chatbot/src/ari/: __init__.py  config.py  dispatcher.py  dto.py  events.py  rest_client.py  service.py  session_manager.py  ws_client.py
ai-chatbot/ai-chatbot/src/clients/: __init__.py  asterisk_client.py  base.py  click_client.py  crm_client.py  gemini_client.py  instagram_client.py  openai_client.py  payme_client.py  telegram_client.py
ai-chatbot/ai-chatbot/src/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
ai-chatbot/ai-chatbot/src/db/: __init__.py  base.py  redis.py  session.py
ai-chatbot/ai-chatbot/src/middlewares/: __init__.py  cors.py  logging.py  rate_limit.py
ai-chatbot/ai-chatbot/src/migrations/: env.py
ai-chatbot/ai-chatbot/src/migrations/versions/: add_channel_to_summaries.py  initial.py
ai-chatbot/ai-chatbot/src/models/: __init__.py  admin.py  call.py  clients_tokens.py  conversation.py  order.py  user.py
ai-chatbot/ai-chatbot/src/providers/: __init__.py  main_provider.py
ai-chatbot/ai-chatbot/src/repositories/: __init__.py  admin_repository.py  base.py  call_repository.py  conversation_repository.py  order_repository.py  user_repository.py
ai-chatbot/ai-chatbot/src/schemas/: __init__.py  base.py  crm.py  statistics.py
ai-chatbot/ai-chatbot/src/services/: admin_service.py  instagram_service.py  statistics_service.py  telegram_service.py
ai-chatbot/ai-chatbot/src/services/ai/: __init__.py  chat_orchestrator.py  context_service.py  crm_service.py  intent_service.py  product_search_service.py  prompt_builder.py  tools.py
ai-chatbot/ai-chatbot/src/static/: demo.html  voice.html
ai-chatbot/ai-chatbot/src/telegram_bot/: keyboards.py  main.py  middlewares.py  states.py
ai-chatbot/ai-chatbot/src/utils/: __init__.py  decorators.py  lang_detect.py  response_scripts.py
ai-chatbot/ai-chatbot/src/workers/: __init__.py  celery_app.py
(+32 files in other folders)
